Remove CollectionsHelper and replace with Set, Map and List methods.
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>